Fix 071 markdown formatting

--- a/_episodes/071-twir-442.md
+++ b/_episodes/071-twir-442.md
@@ -24,13 +24,9 @@ for the cameo by the Ada programming language towards the end!
 
 - [@03:01] Security advisory: the `rustdecimal` crate
 - [@06:55] CTCFC Agenda
-  - [A whirlwind tour of Embedded
-      Rust](https://www.youtube.com/watch?v=MfG7OvfVYQY&t=105s) by James Munns
-  - [Async Rust for Embedded
-  Systems](https://www.youtube.com/watch?v=MfG7OvfVYQY&t=1260s) by Dario
-  Nieuwenhuis
-  - [Rust in Automotive](https://www.youtube.com/watch?v=MfG7OvfVYQY&t=2760s) by Christof
-  Petig and Florian Gilcher
+  - [A whirlwind tour of Embedded Rust](https://www.youtube.com/watch?v=MfG7OvfVYQY&t=105s) by James Munns
+  - [Async Rust for Embedded Systems](https://www.youtube.com/watch?v=MfG7OvfVYQY&t=1260s) by Dario Nieuwenhuis
+  - [Rust in Automotive](https://www.youtube.com/watch?v=MfG7OvfVYQY&t=2760s) by Christof Petig and Florian Gilcher
 
 #### [@09:50] Highlights from the newsletter
 
